# forexfactory-scraper

./: .gitignore  CLAUDE.md  README.md  Repository Overview.md  forex_factory_cache.csv  pyproject.toml  requirements.txt
src/: __init__.py  test_scrape_range.py
src/forexfactory/: detail_parser.py  event.py  incremental.py  main.py  scraper.py
src/forexfactory/utils/: logging.py
src/forexfactory_scraper.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_event.py
tests/integration/: test_full_scrape.py
