[project]
name = "forexfactory-scraper"
version = "0.1.0"
description = "Gets calendar events from ForexFactory.com calendar"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "4x" }
]

dependencies = [
	selenium==4.27.1,
	nodriver,
	python-dateutil==2.8.2,
	tzdata==2024.2,
	pandas==2.2.0
]

[project.urls]
Repository = "https://github.com/4x/forexfactory-scraper"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
